--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,7 @@ android {
 }
 
 dependencies {
-    implementation ('io.socket:socket.io-client:1.0.1') {
-        exclude group: 'org.json', module: 'json'
-    }
+    implementation 'io.socket:socket.io-client:2.0.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
